syntax = "proto3";



option java_multiple_files = true;
option java_outer_classname = "BookProto";

package book;

service BookService {
  rpc AddBook(AddBookRequest) returns (BookResponse);
  rpc UpdateBook(UpdateBookRequest) returns (BookResponse);
  rpc DeleteBook(DeleteBookRequest) returns (EmptyResponse);
  rpc GetBook(GetBookRequest) returns (BookResponse);
}

message AddBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message DeleteBookRequest {
  string id = 1;
}

message GetBookRequest {
  string id = 1;
}

message BookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message EmptyResponse {}
message EmptyRequest {}